--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rama Shehu - Natursteine</title>
-    <meta name="description" content="Discover premium luxury marble collections. Elegant, sustainable, and crafted to perfection for discerning spaces." />
+    <meta name="description" content="Entdecken Sie exklusive Luxus-Natursteinkollektionen – elegant, nachhaltig und mit höchster Präzision gefertigt für anspruchsvolle Räume." />
     <meta name="author" content="LuxeMarble" />
     
     <!-- Premium Typography -->
